--- a/emdethuong.html
+++ b/emdethuong.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="message-container">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fx.com%2Fdaily_kuromi&psig=AOvVaw2kYS8TyPp-J496YT81L4RV&ust=1748612477281000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIj2z5nnyI0DFQAAAAAdAAAAABAE " alt="Hình ảnh thông điệp" class="message-image">
+        <img src="https://pbs.twimg.com/media/FTsZj2OWIAA_Hjp.jpg " alt="Hình ảnh thông điệp" class="message-image">
         <p>Chúc Quyên một buổi tối thật êm dịu, như ánh trăng nhẹ nhàng len qua khung cửa. Mong những giấc mơ đêm nay sẽ thật ngọt ngào, và mang đến cho Quyên cảm giác được yêu thương, dù chỉ là qua vài dòng tin nhắn nhỏ này 🌙✨. Ngày nào em cũng rất dangyeu luôn đó 💖 Gửi tới em Thục Quyên nè~</p>
     </div>
 </body>
